# Lab-solocorp-os2.4

./: .coverage  .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  COPILOT-INTEGRATION-COMPLETE.md  COPILOT-READY.txt  COPILOT-SETUP.md  DEVELOPMENT-PLAN-v0.3.md  LICENSE  PROJECT.md  README.md  SECURITY.md  _watchdog_run.py  govctl  opencode.json  requirements-api.txt
.claude/: settings.json
.codegraph/: daemon.pid
.codex/: COMMANDS.md  config.toml
.github/: dependabot.yml
.grok/: README.md  config.toml
brain/: ceo-identity.md  ceo-memory.json  learnt.md  mirror-core-decision.md  mirror-protocol.md  mission-solocorp-reason.md  session-log.md  soul-plan-20260708.md  version_manager.py
bus/: handoff-to-architect.md
central_bus/: __init__.py  aar.py  api_compliance.py  api_keys.py  (+26 more)
govctl_cli/: __init__.py  __main__.py  adr.py  ao_cmd.py  api_cli.py  bridge.py  cli.py  config.py  guard.py  monitor.py  profile_hooks.py  pyproject.toml  rfc.py  threshold.py  validate.py
govctl_cli/ao/: __init__.py  adapter.py  bridge.py  bridge_integration.py  client.py
govctl_cli/ao/agents/: __init__.py  architect.py  ceo.py  engineering.py  orchestrator.py  qa.py
govctl_cli/api/: __init__.py  dependencies.py  main.py  middleware.py  models.py  openapi.yaml
govctl_cli/api/routes/: __init__.py  agents.py  governance.py  monitoring.py  pipeline.py
govctl_cli/api/static/: dashboard.css  dashboard.js  index.html
govctl_cli/dashboard/: __init__.py  dashboard.py
govctl_cli/templates/: adr_template.toml  guard_template.toml  rfc_template.toml
(+695 files in other folders)
