[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "govctl"
version = "0.1.0"
description = "SoloCorp OS Governance CLI"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "rich>=13.7",
    "tomli_w>=1.0",
]

[project.scripts]
govctl = "govctl_cli.cli:app"
